Make sure ad text wraps

--- a/modules/discovery.style.less
+++ b/modules/discovery.style.less
@@ -84,6 +84,7 @@
                 .discovery-text {
                     color: @blue;
                     font-weight: bold;
+                    word-wrap: break-word;
                 }
 
                 .discovery-tags {
